--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
-language:java
+language:
+java
 script:
    - 'if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then bash ./travis/run_on_pull_requests; fi'
    - 'if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then bash ./travis/run_on_non_pull_requests; fi'
